# DeathStarBench

./: build_socialNetwork.sh
hotelReservation/: docker-compose.yml
mediaMicroservices/: docker-compose-sharding.yml  docker-compose.yml
mediaMicroservices/k8s-yaml/: README.md  nginx-web-server.yaml
mediaMicroservices/scripts/: register_users.sh  write_movie_info.py
mediaMicroservices/wrk2/: nohup.out  run_benches.sh
socialNetwork/: Dockerfile  docker-compose.yml  reset_docker.sh
socialNetwork/config/: service-config.json
socialNetwork/k8s-yaml/: README.md  compose-post-redis.yaml  compose-post-service.yaml  home-timeline-redis.yaml  home-timeline-service.yaml  jaeger.yaml  media-frontend.yaml  media-memcached.yaml  media-mongodb.yaml  media-service.yaml  nginx-thrift.yaml  post-storage-memcached.yaml  post-storage-mongodb.yaml  post-storage-service.yaml  social-graph-mongodb.yaml  social-graph-redis.yaml  social-graph-service.yaml  supervisor-service.yaml  text-service.yaml  unique-id-service.yaml  url-shorten-memcached.yaml  url-shorten-mongodb.yaml  url-shorten-service.yaml  user-memcached.yaml  user-mention-service.yaml  user-mongodb.yaml  user-service.yaml  user-timeline-mongodb.yaml  user-timeline-redis.yaml  user-timeline-service.yaml  write-home-timeline-rabbitmq.yaml  write-home-timeline-service.yaml
socialNetwork/new-k8s-yml/: compose-post-redis-pod.yaml  compose-post-service-pod.yaml  home-timeline-redis-pod.yaml  home-timeline-service-pod.yaml  jaeger-pod.yaml  (+31 more)
socialNetwork/src/SupervisorService/: CMakeLists.txt  SupervisorService.cpp
(+120 files in other folders)
